--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,7 +35,7 @@ jobs:
           restore-keys: |
             mkdocs-material-
 
-      - run: pip install .
+      - run: pip install ".[docs]"
 
       - run: mkdocs build
 
