Quiz results panel, with confetti

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
   - quick-start.md
   - examples.md
   - auto-numbering.md
+  - results-screen.md
   - configuration.md
   - advanced.md
   - Contributing: contributing.md
