Add uppercase softlinks back. Remove dereferencing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,5 +66,5 @@ nav:
   - results-screen.md
   - configuration.md
   - updating.md
-  - Contributing: contributing.md
-  - changelog.md
+  - Contributing: CONTRIBUTING.md
+  - CHANGELOG.md
