--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,5 +66,5 @@ nav:
   - results-screen.md
   - configuration.md
   - updating.md
-  - Contributing: CONTRIBUTING.md
-  - CHANGELOG.md
+  - Contributing: contributing.md
+  - changelog.md
