Add documentation for CLI quiz runner feature
- Create docs/cli-runner.md with comprehensive usage guide
- Update CLAUDE.md with CLI module architecture and config options
- Update README.md with CLI runner in features list and quick example
- Add cli-runner.md to mkdocs.yml navigation under Features

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
       - shuffle-answers.md
       - translations.md
       - qti-export.md
+      - cli-runner.md
   - Contributing:
       - Contributing guidelines: contributing.md
       - contributing-translations.md
