Add 'quiz' as CLI alias for 'mkdocs-quiz'
- Add quiz entry point in pyproject.toml pointing to same main function
- Update documentation to use quiz command in examples
- Update VHS demo script to use quiz command
- Add tests to verify both entry points work correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dev = [
     "babel>=2.9.0",
     "types-polib>=1.0.0",
     "types-Markdown",
+    "tomli>=2.0.0; python_version < '3.11'",
 ]
 docs = [
     "mkdocs-material"
@@ -66,6 +67,7 @@ mkdocs_quiz = "mkdocs_quiz.plugin:MkDocsQuizPlugin"
 
 [project.scripts]
 mkdocs-quiz = "mkdocs_quiz.cli:main"
+quiz = "mkdocs_quiz.cli:main"
 
 [tool.setuptools]
 packages = ["mkdocs_quiz"]
