Restructure documentation for better navigation
- Split examples.md into focused pages: multiple-choice.md, fill-in-blank.md, advanced-formatting.md
- Add new progress-tracking.md with auto-generated screenshots (light/dark modes)
- Rename updating.md to migration.md for clarity
- Reorganize nav into logical sections: Getting Started, Writing Quizzes, Features, CLI & Tools, Contributing
- Add missing config options to docs: embed_source, cli_run
- Expand intro-text.md with more examples
- Fix broken links to old /examples/ and /updating/ URLs
- Add screenshot generation script (docs/assets/generate-screenshots.sh)
- Remove content duplication between quick-start and feature pages
- Fix contributing.md incorrect 'cd example' path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ theme:
     - navigation.instant
     - navigation.top
     - navigation.tracking
-    - navigation.sections
+    - navigation.path
     - navigation.footer
     - search.share
     - toc.follow
@@ -53,20 +53,26 @@ markdown_extensions:
 
 nav:
   - Overview: index.md
-  - installation.md
-  - quick-start.md
-  - configuration.md
+  - Getting Started:
+      - Installation: installation.md
+      - Quick Start: quick-start.md
+      - Configuration: configuration.md
+  - Writing Quizzes:
+      - Multiple Choice: multiple-choice.md
+      - Fill in the Blank: fill-in-blank.md
+      - Advanced Formatting: advanced-formatting.md
   - Features:
-      - examples.md
-      - intro-text.md
-      - results-screen.md
-      - auto-numbering.md
-      - shuffle-answers.md
-      - translations.md
-      - qti-export.md
-      - cli-runner.md
+      - Progress Tracking: progress-tracking.md
+      - Results Screen: results-screen.md
+      - Intro Text: intro-text.md
+      - Auto-Numbering: auto-numbering.md
+      - Answer Shuffling: shuffle-answers.md
+      - Translations: translations.md
+  - CLI & Tools:
+      - CLI Runner: cli-runner.md
+      - QTI Export: qti-export.md
+      - Migration Guide: migration.md
   - Contributing:
-      - Contributing guidelines: contributing.md
-      - contributing-translations.md
-  - updating.md
-  - changelog.md
+      - Development Guide: contributing.md
+      - Adding Translations: contributing-translations.md
+  - Changelog: changelog.md
