--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,9 @@ mkdocs_quiz = "mkdocs_quiz.plugin:MkDocsQuizPlugin"
 mkdocs-quiz = "mkdocs_quiz.cli:main"
 quiz = "mkdocs_quiz.cli:main"
 
-[tool.setuptools]
-packages = ["mkdocs_quiz"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["mkdocs_quiz", "mkdocs_quiz.*"]
 
 [tool.setuptools.package-data]
 mkdocs_quiz = ["css/*", "js/*", "js/vendor/*", "overrides/*", "locales/*.po", "locales/*.pot"]
